<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/foodCard"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/foodCardColor"
    app:cardElevation="50dp"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="12dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="180dp">

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="@string/cover"
            android:src="@drawable/pizza" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/FoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:lines="1"
                android:text="@string/name"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FoodDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/description"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>