<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/homebackground"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/cardbackground">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/namYum"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

       <com.smarteist.autoimageslider.SliderView
           android:layout_width="match_parent"
           android:layout_height="260dp"
           android:id="@+id/gallery"
           app:sliderAnimationDuration="300"
           app:sliderAutoCycleDirection="left"
           app:sliderAutoCycleEnabled="true"
           app:sliderIndicatorAnimationDuration="300"
           app:sliderIndicatorGravity="center_horizontal|bottom"
           app:sliderIndicatorMargin="15dp"
           app:sliderIndicatorOrientation="horizontal"
           app:sliderIndicatorPadding="3dp"
           app:sliderIndicatorRadius="2dp"
           app:sliderIndicatorSelectedColor="@color/lightBlack"
           app:sliderIndicatorUnselectedColor="@color/veryLightGray"
           app:sliderScrollTimeInSec="4"
           app:sliderStartAutoCycle="true"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <com.tomer.fadingtextview.FadingTextView
                android:id="@+id/FadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/lightGray"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                app:timeout="2000"
                app:texts="@array/words_loop"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/lightGray"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/restaurant_info"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >

                <Button
                    android:id="@+id/Menu"
                    android:layout_width="115dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_button"
                    android:focusable="true"
                    android:text="@string/menu"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:ignore="SmallSp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:paddingHorizontal="10dp"
                    android:drawableStart="@drawable/menu_book"
                    tools:targetApi="m" />

                <Button
                    android:id="@+id/OrderTable"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="115dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_button"
                    android:drawableStart="@drawable/pencil"
                    android:focusable="true"
                    android:paddingHorizontal="10dp"
                    android:text="@string/book_table"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:targetApi="m" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>